@@ -65,14 +65,42 @@ namespace CIAO
     class DDS4CCM_NDDS_Export DDS_TypeSupport_i
     {
     public:
+      /**
+        * @name close
+        * Clears all internal maps, freeing the memory.
+        */
       static void close (void);
+
+      /**
+        * @name register_tye
+        * Registering a type-factory combination per DomainParticipant.
+        * Returns false if insertions to one of the maps fails or if there's
+        * already a factory for the given type registered.
+        * Returns true if insertions succeeds.
+        */
       static bool register_type (const char* type, DDS_TypeFactory_i* factory,
                                  ::DDS::DomainParticipant_ptr dp);
+
+      /**
+        * @name unregister_tye
+        * Unregistering a type-factory combination for a specific
+        * DomainParticipant. If the combination cannot be found,
+        * this method returns nil.
+        */
       static DDS_TypeFactory_i * unregister_type (const char* type,
                                                   ::DDS::DomainParticipant_ptr dp);
+
+      /**
+        * @name create_datawriter
+        * Create a type specific datawriter
+        */
       static ::DDS::DataWriter_ptr create_datawriter (DDSDataWriter* dw,
                                                       ::DDS::DomainParticipant_ptr dp,
                                                       ::DDS::Publisher_ptr pub);
+      /**
+        * @name create_datawriter
+        * Create a type specific datareader
+        */
       static ::DDS::DataReader_ptr create_datareader (DDSDataReader* dr,
                                                       ::DDS::DomainParticipant_ptr dp,
                                                       ::DDS::Subscriber_ptr sub);
@@ -85,15 +113,32 @@ namespace CIAO
       typedef std::map< ::DDS::DomainParticipant_ptr, typefactories > participantfactories;
       static participantfactories participant_factories;
 
-      static DDS_TypeFactory_i* get_factory (const char* type,
-                                            ::DDS::DomainParticipant_ptr dp);
-
-      static bool set_factory (const char* type,
-                        DDS_TypeFactory_i* f,
-                        ::DDS::DomainParticipant_ptr dp);
-
-      static void remove_participant_factory (const char * type,
+      /**
+        * @name get_factory_i
+        * Searches for a TypeFactory, based on a type and DomainParticipant
+        */
+      static DDS_TypeFactory_i* get_factory_i (const char* type,
                                               ::DDS::DomainParticipant_ptr dp);
+
+      /**
+        * @name register_factory_i
+        * Insert a new type-factory combination per DomainParticipant and type.
+        * Returns true if no factory for the given type was registered.
+        * Returns false if insertions to the internal lists fail.
+        */
+      static bool register_factory_i (const char* type,
+                                      DDS_TypeFactory_i* f,
+                                      ::DDS::DomainParticipant_ptr dp);
+
+      /**
+        * @name unregister_participant_factory_i
+        * Erasing the registered type-factory combination per DomainParticipant.
+        * If the latest type-factory combination is removed, the DomainParticipant
+        * will also be removed from the internal lists.
+        * This method does not free any memory!
+        */
+      static void unregister_participant_factory_i (const char * type,
+                                                    ::DDS::DomainParticipant_ptr dp);
 
     };
   }
